# DATA_RELY_ANALYSIS_PLATFORM

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_DETAILED_SOLUTIONS.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  CODE_WIKI.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.en.md  README.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  _basic_test.py  _excel_full_output.txt  _full_test.py  _test_graph.py  _test_parser.py  _test_query.js  analyze_lineage.py  api_server.py  build.spec  build_exe.py  comprehensive_test.py  docker-compose.yml  e2e_verify.py  package.bat  package.sh  pyproject.toml  pytest.ini  query_template.html  requirements.txt  run_app.py  start.bat  (+8 more)
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci-cd.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md  TEST_REPORT.md  config.json
.planning/phase-1/: PLAN.md
.qoder/specs/: code-quality-refactoring-plan.md  pam-parser-design.md
.workbuddy/memory/: 2026-04-24.md  2026-05-07.md  2026-05-11.md  MEMORY.md  (+9 more)
AI指标血缘分析_数仓&管架/: readme.md
Python_Rules_Recommend/: .pre-commit-config.yaml  project_rules.md  python-backend-architecture-spec.md  python-quality.yml
SOURCE_DATA/: manifest.yml
app/: __init__.py  config.py  dependencies.py  main.py  repository.py  version.py
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: collect.py  data_sources.py  field_lineage.py  health.py  lineage.py  parse.py  search.py  troubleshoot.py  validation.py
backend/app/collectors/: __init__.py  audit_collector.py  base_collector.py  jdbc_collector.py  oracle_views_collector.py  plsql_collector.py  vsql_collector.py
backend/app/config/: __init__.py  pilot_tables.py
backend/app/core/: config.py  database.py  neo4j.py  redis.py
backend/app/models/: custom_entities.py
backend/app/parsers/: __init__.py  lineage_builder.py  lineage_rules.py  oracle_dialect.py  sql_parser.py
backend/app/schemas/: data_source.py  field_lineage.py  lineage.py  runtime_lineage.py  search.py  table.py  troubleshoot.py  validation_report.py
backend/app/services/: cache_service.py  credibility_scorer.py  lineage_fusion.py  lineage_validator.py  neo4j_lineage_service.py  performance_monitor.py  search_service.py  shortest_path_service.py  troubleshoot_service.py
backend/scripts/: init_pilot_data.py  run_pilot_collection.py  verify_lineage_accuracy.py  verify_pilot_config.py
backend/tests/: conftest.py  stress_test.py  test_api.py  test_lineage_service.py  test_neo4j.py  test_performance.py  test_search_service.py  test_shortest_path_service.py  test_troubleshoot_service.py
core/: __init__.py  base_sql_parser.py  base_tracer.py  caliber_common.py  caliber_condition.py  caliber_exporter.py  caliber_expression.py  caliber_extractor.py  caliber_metadata.py  caliber_tracer.py  data_validator.py  field_cleaner.py  indicator_config_parser.py  indicator_graph_builder.py  indicator_models.py  indicator_sql_parser.py  layer_detector.py  lineage_tracer.py  models.py  parser_protocol.py  parser_registry.py  procedure_helpers.py  procedure_parser.py  sql_boundary_detector.py  table_name_resolver.py  table_parser.py  unified_tracer.py
deprecated/: README.md  api_server.py  static_app.js
docker/: init-postgres.sql
docs/: CODE_QUALITY_ASSESSMENT.md  CODE_REVIEW_REPORT.md  DATA_RELY_ANALYSIS_SYS_CodeReview_20260622.html  DATA_RELY_ANALYSIS_SYS_CodeReview_20260622_validation_plan.md  DATA_RELY_ANALYSIS_SYS_Overall_Design_CodeReview_20260625.md  DESIGN_SPEC_EN.md  DESIGN_SPEC_ZH.md  REFACTOR_DESIGN.md  SOURCE_DATA_目录结构设计方案.md  comprehensive-implementation-tasks.md  demo.md  demo.zh-CN.md  deployment-guide.md  design-specification-en.md  design-specification-zh.md  execution-task-list.md  indicator-lineage-dual-mode-design.md  indicator-spec-design.html  indicator-spec-design.md  performance-report.md  pilot-validation-report.md  production-deployment.md  source_data_parse_audit_report.md  system-design-spec.md  training-materials.md  user-manual.md  解析器架构评估与多系统适配改造方案.html  解析器架构评估与多系统适配改造方案.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: agent-verify.sh  check_change_scope.py  check_python_compat.py  export_lineage_json.py  install-git-hooks.sh  migrate_cache_to_sqlite.py  profile_lineage_query.py  update_static_versions.py  verify_lineage_sampling.py
static/: index.html  style.css  test-page.html
tests/: TEST_PLAN.md  conftest.py  frontend_e2e_test.py  test_app_config_routes.py  test_bracket_matcher.py  test_caliber_api.py  test_caliber_batch_c.py  test_concurrency_comprehensive.py  test_graph_converter.py  test_index_snapshot.py  test_index_snapshot_equivalence.py  test_index_snapshot_lifecycle.py  test_indicator_adapter.py  test_indicator_api.py  test_indicator_config_parser_sample.py  test_lineage_api.py  test_lineage_dedup.py  test_lineage_result_cleanup.py  test_lineage_tracer_warehouse_layers.py  test_node_field_metadata.py  test_pam_dml_parser.py  test_pam_parser.py  test_parse_api.py  test_parser_concurrency.py  test_progress_tasks.py  test_project_boundary.py  test_quality_guardrails.py  test_repository_search.py  test_snapshot_query_consistency.py  test_source_data_report_fixes.py  test_sql_boundary_detector.py  test_sqlite_store.py  test_state_consistency.py  test_system_api.py  test_system_lineage_export.py  test_table_query_snapshot.py  test_tracer_procedure.py  test_unified_tracer.py  test_version_consistency.py  test_warehouse_parser.py  (+1 more)
(+26685 files in other folders)
