[project]
name = "data-rely-analysis-sys"
version = "2.2.0"
description = "数据血缘分析系统 - 双TAB架构（解析层 + 展示层）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.24.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
# 排除历史归档/根目录调试脚本，避免污染主代码库的 lint 结果
exclude = [
    "deprecated",
    "_basic_test.py",
    "_full_test.py",
    "_test_graph.py",
    "_test_parser.py",
    "_excel_full_output.txt",
    "comprehensive_test.py",
    "e2e_verify.py",
    "test_display_bug_fixes.py",
    "test_indicator_service.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "core"]

[tool.ruff.lint.per-file-ignores]
"core/**" = ["SIM", "N", "B007", "UP045"]
"app/api/**" = ["B008"]
"tests/**" = ["SIM", "N"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
warn_return_any = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "core.*"
disallow_untyped_defs = false
allow_untyped_calls = true
allow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q"

[tool.coverage.run]
source = ["app", "core"]
omit = ["tests/*", "app/main.py"]

[tool.fastapi]
entrypoint = "app.main:app"
